openapi client-server + реализация/интеграция сервиса платежей
