# payment-service/src/main/java/ru/yandex/practicum/controller/PaymentController.java
@@ -1,0 +1,48 @@
+package ru.yandex.practicum.controller;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.server.ServerWebExchange;
+import reactor.core.publisher.Mono;
+import ru.yandex.practicum.payment.client.api.PaymentApi;
+import ru.yandex.practicum.payment.client.dto.ErrorResponse;
+import ru.yandex.practicum.service.PaymentService;
+
+import java.math.BigDecimal;
+
+@RestController
+public class PaymentController implements PaymentApi {
+    private final PaymentService paymentService;
+
+    @Autowired
+    public PaymentController(PaymentService paymentService) {
+        this.paymentService = paymentService;
+    }
+
+    @Override
+    public Mono<ResponseEntity<BigDecimal>> getBalance(ServerWebExchange exchange) {
+        return paymentService.getBalance().map(ResponseEntity::ok);
+    }
+
+    @Override
+    public Mono<ResponseEntity<Void>> processPayment(Mono<BigDecimal> amount, ServerWebExchange exchange) {
+        return paymentService.processPayment(amount).map(ResponseEntity::ok);
+    }
+
+    @ExceptionHandler(IllegalArgumentException.class)
+    public Mono<ResponseEntity<ErrorResponse>> handleIllegalStateException(IllegalStateException ex) {
+        return Mono.just(ResponseEntity
+                .status(HttpStatus.BAD_REQUEST)
+                .body(new ErrorResponse().error(ex.getMessage())));
+    }
+
+    @ExceptionHandler(RuntimeException.class)
+    public Mono<ResponseEntity<ErrorResponse>> handleRuntimeException(RuntimeException ex) {
+        return Mono.just(ResponseEntity
+                .status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body(new ErrorResponse().error(ex.getMessage())));
+    }
+}
